--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>2.3.2</version>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
@@ -209,6 +209,11 @@
 			<groupId>org.utgenome.thirdparty</groupId>
 			<artifactId>picard</artifactId>
 			<version>${picard.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.3.1</version>
 		</dependency>
 	</dependencies>
 	<reporting>
