--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
->
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>ch.isb-sib</groupId>
@@ -93,6 +92,13 @@
 					</contextHandlers>
 				</configuration>
 			</plugin>
+			<plugin>
+      <artifactId>maven-war-plugin</artifactId>
+      <version>2.1</version>
+      <configuration>
+        <attachClasses>true</attachClasses>
+      </configuration>
+    </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-dependency-plugin</artifactId>
@@ -193,6 +199,8 @@
 			<artifactId>sesame-http-workbench</artifactId>
 			<version>${sesame.version}</version>
 			<type>war</type>
+			<scope>compile</scope>
+			<!-- <classifier>classes</classifier> -->
 		</dependency>
 		<dependency>
 			<groupId>org.openrdf.sesame</groupId>
@@ -214,6 +222,16 @@
 			<groupId>commons-cli</groupId>
 			<artifactId>commons-cli</artifactId>
 			<version>1.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-server</artifactId>
+			<version>9.3.3.v20150827</version>
+		</dependency>
+		<dependency>
+			<groupId>org.eclipse.jetty</groupId>
+			<artifactId>jetty-servlet</artifactId>
+			<version>9.3.3.v20150827</version>
 		</dependency>
 	</dependencies>
 	<reporting>
