--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<sesame.version>4.0.0-M1</sesame.version>
+		<sesame.version>2.2</sesame.version>
 		<picard.version>1.102.0</picard.version>
 	</properties>
 	<repositories>
@@ -32,7 +32,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<version>3.5.1</version>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
@@ -99,44 +99,8 @@
         <attachClasses>true</attachClasses>
       </configuration>
     </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>default-cli</id>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.openrdf.sesame</groupId>
-									<artifactId>sesame-http-workbench</artifactId>
-									<version>${sesame.version}</version>
-									<type>war</type>
-									<overWrite>true</overWrite>
-									<destFileName>openrdf-sesame-webapp.war</destFileName>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.openrdf.sesame</groupId>
-									<artifactId>sesame-http-server</artifactId>
-									<version>${sesame.version}</version>
-									<type>war</type>
-									<overWrite>true</overWrite>
-									<destFileName>openrdf-sesame-server.war</destFileName>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>
-								${project.build.directory}
-							</outputDirectory>
-							<overWriteReleases>true</overWriteReleases>
-							<overWriteSnapshots>true</overWriteSnapshots>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-		</plugins>
-
-	</build>
-
+    </plugins>
+    </build>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -145,73 +109,9 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>commons-logging</groupId>
-			<artifactId>commons-logging</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-query</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-runtime</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-queryalgebra-model</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-queryparser-sparql</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-queryalgebra-evaluation</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-sail-memory</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-repository-sail</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-rio-turtle</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-queryresultio-text</artifactId>
-			<version>${sesame.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-http-workbench</artifactId>
-			<version>${sesame.version}</version>
-			<type>war</type>
-			<scope>compile</scope>
-			<!-- <classifier>classes</classifier> -->
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-http-server</artifactId>
-			<version>${sesame.version}</version>
-			<type>war</type>
-		</dependency>
-		<dependency>
-			<groupId>org.openrdf.sesame</groupId>
-			<artifactId>sesame-queryresultio-sparqljson</artifactId>
-			<version>${sesame.version}</version>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.0.13</version>
 		</dependency>
 		<dependency>
 			<groupId>org.utgenome.thirdparty</groupId>
@@ -224,15 +124,21 @@
 			<version>1.3.1</version>
 		</dependency>
 		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-server</artifactId>
-			<version>9.3.3.v20150827</version>
+			<groupId>org.eclipse.rdf4j</groupId>
+			<artifactId>rdf4j-runtime</artifactId>
+			<version>${sesame.version}</version>
+			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-			<version>9.3.3.v20150827</version>
-		</dependency>
+		 <dependency>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-server</artifactId>
+                        <version>9.3.3.v20150827</version>
+                </dependency>
+                <dependency>
+                        <groupId>org.eclipse.jetty</groupId>
+                        <artifactId>jetty-servlet</artifactId>
+                        <version>9.3.3.v20150827</version>
+                </dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
